move dv and change path for build .jar file